--- a/WEB/register.html
+++ b/WEB/register.html
@@ -4,15 +4,28 @@
 	</head>
 	
 	<body>
-		<h1>Register</h1>
-		<input type="text" placeholder="* Vorname"/><br/>
-		<input type="text" placeholder="* Nachname"/><br/>
-		<input type="text" placeholder="* UserName"/><br/>
-		<input type="password" placeholder="* Passwort"/><br/>
-		<input type="password" placeholder="* Passwort-wiederholung"/><br/>
-		<input type="email" placeholder="* your@email"/><br/>
-		<input type="text" placeholder="* 80 [kg]" pattern="[0-9]*" alt="[0-9]*"/><br/>
-		<input type="date" placeholder="Ziel: 2012.12.31"/><br/>
-		<input type="button" value="registrieren"/>
+		<script type="text/javascript" src="jquery-1.7.2.min.js"></script>
+		<script type="text/javascript">
+			function makeCall(){
+				$.ajax({
+				    url: 'http://localhost:8080/rest/user/register',
+				    type: 'get',
+				    data: $('#registerForm').serializeArray(), // or 'ID=1&Name=John&Age=10'
+				    success: function() { alert('PUT completed'); }
+				});
+			}
+		</script>
+		<form name="registerForm">
+			<h1>Register</h1>
+			<input type="text" placeholder="* Vorname"/><br/>
+			<input type="text" placeholder="* Nachname"/><br/>
+			<input type="text" placeholder="* UserName"/><br/>
+			<input type="password" placeholder="* Passwort"/><br/>
+			<input type="password" placeholder="* Passwort-wiederholung"/><br/>
+			<input type="email" placeholder="* your@email"/><br/>
+			<input type="text" placeholder="* 80 [kg]" pattern="[0-9]*" alt="[0-9]*"/><br/>
+			<input type="date" placeholder="Ziel: 2012.12.31"/><br/>
+			<input type="button" value="registrieren" onclick="makeCall()"/>
+		</form>
 	</body>
 </html>
