--- a/WEB/register.html
+++ b/WEB/register.html
@@ -9,7 +9,7 @@
 			function makeCall(){
 				$.ajax({
 				    url: 'http://localhost:8080/rest/user/register',
-				    type: 'put',
+				    type: 'get',
 				    data: $('#registerForm').serializeArray(), // or 'ID=1&Name=John&Age=10'
 				    success: function(data) { 
 				    	alert('PUT completed\nStatusText:\t ' + data.statusText + '\nresponse:\t ' + data.responseText);
