--- a/WEB/register.html
+++ b/WEB/register.html
@@ -29,7 +29,7 @@
 			<input name="password2" 	type="password" placeholder="* Passwort-wiederholung"/><br/>
 			<input name="email" 		type="email" 	placeholder="* your@email"/><br/>
 			<input name="targetWeight" 	type="text" 	placeholder="* 80 [kg]" pattern="[0-9]*" alt="[0-9]*"/><br/>
-			<input name="targetDate" 	type="date" 	placeholder="Ziel: 31.12.2016"/><br/>
+			<input name="targetDate" 	type="date" 	placeholder="Ziel: 2016-12-31"/><br/>
 			<input 						type="button" 	value="registrieren" onclick="makeCall()"/>
 		</form>
 	</body>
