--- a/WEB/register.html
+++ b/WEB/register.html
@@ -12,7 +12,7 @@
 				    type: 'get',
 				    data: $('#registerForm').serializeArray(), // or 'ID=1&Name=John&Age=10'
 				    success: function(data) { 
-				    	alert('PUT completed\nStatusText:\t ' + data.statusText + '\nresponse:\t ' + data.responseText);
+				    	document.location="login.html";
 				    },
 				    error: function(data) { 
 				    	alert('PUT failed\nStatusText:\t ' + data.statusText + '\nresponse:\t ' + data.responseText); 
