--- a/WEB/overview.html
+++ b/WEB/overview.html
@@ -8,9 +8,9 @@
 		<script type="text/javascript">
 			function makeCall(){
 				$.ajax({
-				    url: 'http://localhost:8080/rest/user/1000',
+				    url: 'http://localhost:8080/rest/user/get',
 				    type: 'get',
-				    data: $('#registerForm').serializeArray(), // or 'ID=1&Name=John&Age=10'
+				    //data: $('#registerForm').serializeArray(), // or 'ID=1&Name=John&Age=10'
 				    success: function(user) {
 				    	$('#registerForm').text("user: " + user.firstName + " " + user.lastName);
 				    	alert('PUT completed\nStatusText:\t ' + data.statusText + '\nresponse:\t ' + data.responseText);
