changed button to submits

--- a/WEB/login.html
+++ b/WEB/login.html
@@ -27,7 +27,7 @@
 			<h1>Login</h1>
 			<input name="userName"	type="text"		placeholder="Username"/><br/>
 			<input name="password" 	type="password" placeholder="Password"/><br/>
-			<input 					type="button" 	value="login" onclick="makeCall()"/>
+			<input 					type="submit" 	value="login" onclick="makeCall()"/>
 		</form>
 	</body>
 </html>
