--- a/WEB/register.html
+++ b/WEB/register.html
@@ -30,7 +30,7 @@
 			<input name="email" 		type="email" 	placeholder="* your@email"/><br/>
 			<input name="targetWeight" 	type="text" 	placeholder="* 80 [kg]" pattern="[0-9]*" alt="[0-9]*"/><br/>
 			<input name="targetDate" 	type="date" 	placeholder="Ziel: 2016-12-31"/><br/>
-			<input 						type="button" 	value="registrieren" onclick="makeCall()"/>
+			<input 						type="submit" 	value="registrieren" onclick="makeCall()"/>
 		</form>
 	</body>
 </html>
