--- a/WEB/register.html
+++ b/WEB/register.html
@@ -1,9 +1,8 @@
 <html>
 	<head>
-		<title>TogetherLess - Register</title>
+		<title>TogetherLess</title>
 		<link rel="stylesheet" media="all" href="main.css"/>
 	</head>
-	
 	<body>
 		<script type="text/javascript" src="jquery-1.7.2.min.js"></script>
 		<script type="text/javascript">
