started logic for replace include tag

--- a/WEB/register-withInclude.html
+++ b/WEB/register-withInclude.html
@@ -1,4 +1,4 @@
-<tl:include file="./header.html"/>
+<tgl:include file="include/header.html"/>
 <script type="text/javascript" src="jquery-1.7.2.min.js"></script>
 <script type="text/javascript">
 	function makeCall(){
@@ -37,4 +37,4 @@
 	<input name="targetDate" 	type="date" 	placeholder="Ziel: 2016-12-31"/><br/>
 	<input 						type="button" 	value="registrieren" onclick="makeCall()"/>
 </form>
-<tl:include file="./footer.html"/>
+<tgl:include file="include/footer.html"/>
