--- a/WEB/registration/activation.html
+++ b/WEB/registration/activation.html
@@ -27,7 +27,7 @@
 	</script>
 	
 	<div id="activationDone" style="display: none;">
-		<h1>Activierung abgeschlossen</h1>
+		<h1><img src="../images/logo.png" border="0"/>&nbsp;Activierung abgeschlossen</h1>
 		<p>
 			Sie haben Ihren Account erfolgreich activiert.
 			<br/>
@@ -36,18 +36,18 @@
 	</div>
 	
 	<div id="activationFailed" style="display: none;">
-		<h1>Activierung fehlgeschlagen!</h1>
+		<h1><img src="../images/logo.png" border="0"/>&nbsp;Activierung fehlgeschlagen!</h1>
 		<p>bla bla bla</p>	
 	</div>
 	
 	<div id="noActivationCode" style="display: none;">
-		<h1>Keine activierung möglich!</h1>
+		<h1><img src="../images/logo.png" border="0"/>&nbsp;Keine activierung möglich!</h1>
 		<p>Ohne Aktivierungscode ist es nicht möglich TogetherLess zu benutzen. Loggen Sie sich ein, und aktivieren Sie ihren Account erneut.</p>
 		<p>zum <a href="../login.html">login</a>.</p>
 	</div>
 	
 	<div id="alreadyActivated" style="display: none;">
-		<h1>Account ist bereits aktiviert</h1>
+		<h1><img src="../images/logo.png" border="0"/>&nbsp;Account ist bereits aktiviert</h1>
 		<p>Ihr Account ist bereits aktiviert und kann benutzt werden.</p>
 		<p>Bitte <a href="../login.html">loggen</a> Sie sich ein.</p>
 	</div>
