--- a/WEB/registration/register.html
+++ b/WEB/registration/register.html
@@ -25,7 +25,7 @@
 	}
 </script>
 <form id="registerForm">
-	<h1>Register</h1>
+	<h1><img src="../images/logo.png" border="0"/>&nbsp;Register</h1>
 	<input name="firstName"		type="text" 	placeholder="* Vorname"/><br/>
 	<input name="lastName" 		type="text" 	placeholder="* Nachname"/><br/>
 	<input name="userName" 		type="text" 	placeholder="* UserName"/><br/>
