--- a/WEB/registration/registerDone.html
+++ b/WEB/registration/registerDone.html
@@ -1,5 +1,5 @@
 <tgl:include file="../include/header.html"/>
-	<h1>Registrierung abgeschlossen</h1>
+	<h1><img src="../images/logo.png" border="0"/>&nbsp;Registrierung abgeschlossen</h1>
 	<p>Sie haben die Registration erfolgreich abgeschlossen.</p>
 	<p>In Kürze erhalten Sie von uns eine Mail. Bitte folgen Sie den Anweisungen in der E-Mail um die Aktivierung Ihres Accounts abzuschliessen.</p>
 	<p>Falls Sie innerhalb eines Tages kein Aktivierungsmail erhalten <a href="#">kontaktieren</a> Sie uns!</p>
