--- a/WEB/login.html
+++ b/WEB/login.html
@@ -27,7 +27,7 @@
 		</script>
 		
 		<form id="registerForm">
-			<h1>Login</h1>
+			<h1><img src="images/logo.png" border="0"/>&nbsp;Login</h1>
 			<input name="userName"	type="text"		placeholder="Username"/><br/>
 			<input name="password" 	type="password" placeholder="Password"/><br/>
 			<input 					type="button" 	value="login" onclick="makeCall()"/>
