introduce JS model & view (controller is missing at the moment) for measurement

--- a/WEB/login.html
+++ b/WEB/login.html
@@ -24,10 +24,12 @@
 				    }
 				});
 			}
+			
+			$(document).ready(function() {
+				setTitle("Login");
+			});
 		</script>
-		
 		<form id="registerForm">
-			<h1><img src="images/logo.png" border="0"/>&nbsp;Login</h1>
 			<input name="userName"	type="text"		placeholder="Username"/><br/>
 			<input name="password" 	type="password" placeholder="Password"/><br/>
 			<input 					type="button" 	value="login" onclick="makeCall()"/>
