renamed measurement.html to weightLog.html

--- a/WEB/overview.html
+++ b/WEB/overview.html
@@ -5,7 +5,7 @@ $(document).ready(function() {
 });
 </script>
 <ul>
-	<li><a href="measurement.html">Gewicht</a></li>
+	<li><a href="weightLog/weightLog.html">Gewicht</a></li>
 	<li>Gruppen</li>
 	<li>Logout</li>
 </ul>
