--- a/WEB/weightLog/weightLog.html
+++ b/WEB/weightLog/weightLog.html
@@ -1,4 +1,4 @@
-<tgl:include file="include/headerApp.html"/>
+<tgl:include file="../include/headerApp.html"/>
 <script type="text/javascript" src="/resource/weightLog/measurementApi.js"></script>
 <script type="text/javascript" src="/resource/weightLog/weightLogModel.js"></script>
 <script type="text/javascript" src="/resource/weightLog/weightLogView.js"></script>
@@ -32,4 +32,4 @@
 	<input id="addButton" type="button" value="Los"/>
 </div>
 <ol id="logs"></ol>
-<tgl:include file="include/footer.html"/>
+<tgl:include file="../include/footer.html"/>
