Styled weightLog inputFields

--- a/WEB/weightLog/weightLog.html
+++ b/WEB/weightLog/weightLog.html
@@ -28,8 +28,7 @@
 	}
 </script>
 <div>
-	<input id="logWeight" type="number" placeholder="Aktuelles Gewicht eintragen [kg]"/>
-	<input id="addButton" type="button" value="Los"/>
+	<input id="logWeight" type="number" placeholder="Aktuelles Gewicht eintragen [kg]"/><input id="addButton" type="button" value="Los"/>
 </div>
 <ol id="logs"></ol>
 <tgl:include file="../include/footer.html"/>
