--- a/WEB/weightLog/weightLog.html
+++ b/WEB/weightLog/weightLog.html
@@ -14,6 +14,7 @@
 	});
 	
 	$(document).ready(function() {
+		setTitle("Gewicht");
 		var model = new WeightLogListModel();
 		var view = new WeightLogView(model, $("#logs"), $('#logWeight'), $("#addButton"));
 		var controller = new WeightLogController(model, view);
@@ -30,5 +31,5 @@
 <div>
 	<input id="logWeight" type="number" placeholder="Aktuelles Gewicht eintragen [kg]"/><input id="addButton" type="button" value="Los"/>
 </div>
-<ol id="logs"></ol>
+<ol id="logs" class="elementList"></ol>
 <tgl:include file="../include/footer.html"/>
